Code for compliance doc upload

--- a/LitigationSoftware/LSWebApp/Views/Shared/_Layout.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Register Company", "Index", "TaxReturn")</li>
                     <li>@Html.ActionLink("List of Companies", "GetCompanyList", "TaxReturn")</li>
-                    @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                    <li>@Html.ActionLink("Compliances", "GetComplianceList", "TaxReturn")</li>
                 </ul>
             </div>
         </div>
