--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ComplianceDocumentList.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ComplianceDocumentList.cshtml
@@ -17,6 +17,24 @@
             <td class="tdBorder">
                 @compliance.Description
             </td>
+            <td class="tdBorder">
+                @foreach (var document in Model.ComplianceDocumentList.Where(d => d.ComplianceId == compliance.Id))
+                {
+                    <ul>
+                        <li>
+                            <a href=" @Url.Content("~/ComplianceDocumentsUpload/"+document.FilePath)"
+                               target="_blank">
+                                @document.FileName
+                            </a>
+                            <span class="deleteDoc" onclick="deleteDocument(@(document.Id))">
+                                <i class="fa fa-calendar" aria-hidden="true">
+                                </i>
+                            </span>
+                            @*<button type="button" class="deleteDoc" onclick="deleteDocument(@(document.Id))">Delete</button>*@
+                        </li>
+                    </ul>
+                }
+            </td>
         </tr>
     }
 </table>
