--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ComplianceDocumentList.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ComplianceDocumentList.cshtml
@@ -15,6 +15,9 @@
     {
         <tr>
             <td class="tdBorder">
+                @compliance.SrNo
+            </td>
+            <td class="tdBorder">
                 @compliance.Description
             </td>
             <td class="tdBorder">
@@ -26,7 +29,7 @@
                                target="_blank">
                                 @document.FileName
                             </a>
-                            <span class="deleteDoc" onclick="deleteDocument(@(document.Id))">
+                            <span class="deleteDoc" onclick="deleteDocument(@(document.Id), '@(document.FilePath)')">
                                 <i class="fa fa-calendar" aria-hidden="true">
                                 </i>
                             </span>
