--- a/LitigationSoftware/LSWebApp/Views/Shared/_Layout.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/Shared/_Layout.cshtml
@@ -10,8 +10,6 @@
 
 </head>
 <body>
-
-
     <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <a class="navbar-brand" href="#">Litigation App</a>
@@ -28,28 +26,12 @@
                         <a class="nav-link" href="@Url.Action("GetCompanyList","TaxReturn")">List of Companies</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("GetComplianceList","TaxReturn")">Compliances</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
                     </li>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Login", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Register Company", "Index", "TaxReturn")</li>
-                    <li>@Html.ActionLink("List of Companies", "GetCompanyList", "TaxReturn")</li>
-                    <li>@Html.ActionLink("Compliances", "GetComplianceList", "TaxReturn")</li>
                 </ul>
-                @*<form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>*@
             </div>
         </nav>
     </div>
