--- a/LitigationSoftware/LSWebApp/Views/Shared/_LitigationDD.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/Shared/_LitigationDD.cshtml
@@ -2,8 +2,14 @@
 <div class="custom-dd" id="dv">
     @Html.TextBoxFor(m=>m.AddActionName, Model.AddActionName, new { @style = "display:none;", @class = "hdActionNameLitigationDD" })
     @Html.TextBoxFor(m => m.RefreshActionName, Model.RefreshActionName, new { @style = "display:none;", @class = "hdRefreshActionNameLitigationDD" })
-    @Html.DropDownList(Model.BindingProperty, Model.Source, new { @class = "ddLitigationDD" })
+    @Html.DropDownList(Model.BindingProperty, Model.Source, new { @class = "ddLitigationDD" })   
     @Html.TextBoxFor(m=>m.Description, Model.Description, new { @style = "display:none;", @class= "txtLitigationDD" })
+    @if (Model.CheckboxVisible)
+    {           
+        @Html.CheckBoxFor(m => m.CheckboxValue, new { @style = "display:none;", @title = "Is return?"
+        , @class = "chkLitigationDD" })
+        <label for="@Html.NameFor(x => x.CheckboxValue)" style = "display:none;" class = "chkLitigationDD">Is Return</label>
+    }
     <img src="~/images/plus.png" 
          class="imgLitigationDD"
          style="width:20px;height:20px;"/>
