--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
@@ -32,7 +32,7 @@
         </tbody>
      </table>
      <br />
-     <table class="table table-hover">
+     <table class="table table-hover tblITRetDetails">
          <thead>
              <tr>
                  <th colspan="2">SNo.</th>
