--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ComplianceList.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ComplianceList.cshtml
@@ -44,7 +44,7 @@
                     @Html.TextBoxFor(model => model.ReportFile, new { type = "file" })
                 </td>
                 <td>
-                    <button type="submit" class="fileUpload" disabled>Upload File</button>
+                    <button type="submit"  class="btn btn-primary btn-sm">Upload File</button>
                 </td>
             </tr>
         </table>
