--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ComplianceDocumentList.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ComplianceDocumentList.cshtml
@@ -30,8 +30,9 @@
                                 @document.FileName
                             </a>
                             <span class="deleteDoc" onclick="deleteDocument(@(document.Id), '@(document.FilePath)')">
-                                <i class="fa fa-calendar" aria-hidden="true">
-                                </i>
+                                Delete
+                                @*<i class="fa fa-calendar" aria-hidden="true">
+                                </i>*@
                             </span>
                             @*<button type="button" class="deleteDoc" onclick="deleteDocument(@(document.Id))">Delete</button>*@
                         </li>
