--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ExistingITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ExistingITReturnDetails.cshtml
@@ -22,13 +22,13 @@
                             @*@Model.ITReturnDetailsObject.CompanyName*@
                             @Html.LabelFor(m => m.ITReturnDetailsObject.CompanyName, Model.ITReturnDetailsObject.CompanyName)
                             @Html.HiddenFor(m => m.ITReturnDetailsObject.CompanyName)
-                            @Html.HiddenFor(m => m.ITReturnDetailsObject.CompanyID)
+                            @Html.HiddenFor(m => m.ITReturnDetailsObject.CompanyID,Model.ITReturnDetailsObject.CompanyID)
                         </td>
                         <td>
                             @Html.DropDownListFor(m => m.ITReturnDetailsObject.FYAYID, new SelectList(Model.FYAYList, "ID", "FinancialYear"))
                         </td>
                         <td>
-                            <button type="submit" class="btn btn-primary btn-sm">Search</button>
+                            <button type="submit" class="btn btn-primary btn-sm" id="btnsrch">Search</button>
                         </td>
                     </tr>
                 </tbody>
@@ -37,10 +37,43 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="bs-component">
+}
+<div class="container">
+    <div class="bs-component" id="sectionDiv">
 
-        </div>
     </div>
-  }
+</div>
+@section scripts
+{
+<script type="text/javascript">
+    $(document).ready(function () {
+       
+            //loadexistingitsections();
 
+            $("#btnsrch").click(function () {
+                loadexistingitsections();
+                return false;
+            });
+        });
+
+    function loadexistingitsections() {
+        
+        var url = "@Url.Action("SearchITReturnDetails", "TaxReturn")" + '?companyId=' + $('#ITReturnDetailsObject_CompanyID').val() + '&fyayId=' + $('#ITReturnDetailsObject_FYAYID').val();
+
+        $.ajax({
+            url: url ,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            type: 'GET',
+            error: function (xhr,status,error) {
+                alert("inside error " + xhr.responseText);
+            },
+            dataType: 'html',
+            success: function (data) {
+                 $("#sectionDiv").html(data);
+            }
+            });
+        }
+</script>
+
+}
